@@ -11,6 +11,7 @@ freshening:
   freshen: true          # whether to freshen columns by default
   timeout: 100           # default amount of time in ms to wait for freshening to finish
 service-discovery: true  # whether to register this REST instance with service discovery
+remote-shutdown: true    # enable/disable admin command that allows the server to be shut down via REST
 
 
 ########## Dropwizard Configuration ##########
